--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@ label[for="obs"]{ display:block; margin-bottom:6px; }
             <input id="dniTec" name="dniTec" type="text" inputmode="numeric" class="mono" placeholder="00.000.000"/>
             <div class="two" style="margin-top:10px;">
               <div class="field">
-                <label for="horasTec">Horas</label>
+                <label for="horasTec">Inicio de la instalación</label>
                 <input id="horasTec" name="horasTec" type="number" min="0" step="1" value="0"/>
               </div>
               <div class="field">
-                <label for="minTec">Minutos</label>
-                <input id="minTec" name="minTec" type="number" min="0" max="59" step="1" value="0"/>
+                <label for="minTec">Fin de la instalación</label>
+                <input id="horasTec" name="horasTec" type="number" min="0" step="1" value="0"/>
               </div>
             </div>
           </div>
@@ -733,3 +733,4 @@ $('#btnReset')?.addEventListener('click', ()=> msg('', ''));
   </script>
 </body>
 </html>
+
