--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@ label[for="obs"]{ display:block; margin-bottom:6px; }
             <input id="dniTec" name="dniTec" type="text" inputmode="numeric" class="mono" placeholder="00.000.000"/>
             <div class="two" style="margin-top:10px;">
               <div class="field">
-                <label for="horasTec">Inicio de la instalación</label>
+                <label for="horasTec">Hora de inicio de la instalación</label>
                 <input id="horasTec" name="horasTec" type="number" min="0" step="1" value="0"/>
               </div>
               <div class="field">
-                <label for="minTec">Fin de la instalación</label>
+                <label for="minTec">Hora de fin de la instalación</label>
                 <input id="horasTec" name="horasTec" type="number" min="0" step="1" value="0"/>
               </div>
             </div>
@@ -733,4 +733,5 @@ $('#btnReset')?.addEventListener('click', ()=> msg('', ''));
   </script>
 </body>
 </html>
+
 
