--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
       <!-- Envío -->
       <div class="actions">
-        <button id="btnEnviar" class="btn" type="button">Enviar formulario</button>
+        <button id="btnEnviar" class="btn" type="button">Generar pdf</button>
         <button id="btnReset" class="btn ghost" type="reset">Limpiar todo</button>
       </div>
       <div id="formMsg"></div>
@@ -132,3 +132,4 @@
   <script defer src="app.ui.js"></script>
 </body>
 </html>
+
